@@ -24,26 +24,26 @@
 #' 
 #' # 1. Define Population and Run energySIM()
 #' 
-#' pop1 <- as.species(x=-98.7, y=34.7,
-#' morphpar1=15, morphpar1mean=16, morphpar1sd=2,morphpar1sign="Pos",
-#' morphpar2=19,morphpar2mean=18,morphpar2sd=1,morphpar2sign="Pos")
+#' #pop1 <- as.species(x=-98.7, y=34.7,
+#' #morphpar1=15, morphpar1mean=16, morphpar1sd=2,morphpar1sign="Pos",
+#' #morphpar2=19,morphpar2mean=18,morphpar2sd=1,morphpar2sign="Pos")
 #' 
-#' \donttest{EX1=energySIM(replicates=10,days=7,env_rast=ex_raster, search_radius=200,
-#' sigma=.1, dest_x=-108.6, dest_y=26.2, mot_x=.9, mot_y=.9,
-#' modeled_species=pop1,
-#' optimum_lo=.8,optimum_hi=.9,init_energy=100,
-#' direction="S",write_results=FALSE,single_rast=TRUE,mortality = TRUE)}
+#' #EX1=energySIM(replicates=10,days=7,env_rast=ex_raster, search_radius=200,
+#' #sigma=.1, dest_x=-108.6, dest_y=26.2, mot_x=.9, mot_y=.9,
+#' #modeled_species=pop1,
+#' #optimum_lo=.8,optimum_hi=.9,init_energy=100,
+#' #direction="S",write_results=FALSE,single_rast=TRUE,mortality = TRUE)
+#' 
+#' data(EX1)
 #' 
 #' # 2. Run energyVIZ() on your result
 #' 
-#' \donttest{energyVIZ(EX1,title="Visualizing EnergySIM results",type="plot", aspect_ratio=5/3,
-#' label=TRUE)}
+#' energyVIZ(EX1,title="Visualizing EnergySIM results",type="plot", aspect_ratio=5/3,
+#' label=TRUE)
 #' 
-#' \donttest{energyVIZ(EX1,type="summary_table")}
-#' 
-#' \donttest{energyVIZ(EX1,type="strat_table")}
-#' 
-#' \donttest{#energyVIZ(EX1,type="gradient")}
+#' #energyVIZ(EX1,type="summary_table")
+#' #energyVIZ(EX1,type="strat_table")
+#' #energyVIZ(EX1,type="gradient")
 #' @export
 
 energyVIZ=function(data, type="plot", title="energySIM results",
